API structure
readme and .env-example

api update

chore: update
