# internal/adapters/http/server/server.go
@@ -7,9 +7,11 @@ import (
 
 	"github.com/go-chi/chi"
 	"github.com/go-chi/chi/middleware"
+	"github.com/go-chi/jwtauth/v5"
 	"github.com/osvaldoabel/user-api/configs"
 	_ "github.com/osvaldoabel/user-api/docs"
-	"github.com/osvaldoabel/user-api/internal/adapters/http/handlers"
+	authHandler "github.com/osvaldoabel/user-api/internal/adapters/http/handlers/auth"
+	userHandler "github.com/osvaldoabel/user-api/internal/adapters/http/handlers/user"
 	"github.com/osvaldoabel/user-api/internal/container"
 	userService "github.com/osvaldoabel/user-api/internal/services/user"
 	httpSwagger "github.com/swaggo/http-swagger"
@@ -32,7 +34,8 @@ type WebServer struct {
 	Router       *chi.Mux
 	Configs      configs.Conf
 	Dependencies container.DependencyContainer
-	UserHandler  *handlers.UserHandler
+	UserHandler  *userHandler.UserHandler
+	TokenHandler *authHandler.TokenHandler
 }
 
 func NewWebServer(conf configs.Conf) WebServer {
@@ -45,7 +48,8 @@ func NewWebServer(conf configs.Conf) WebServer {
 		Router:       r,
 		Configs:      conf,
 		Dependencies: deps,
-		UserHandler:  handlers.NewUserHandler(userService),
+		UserHandler:  userHandler.NewUserHandler(userService),
+		TokenHandler: authHandler.NewTokenHandler(userService),
 	}
 }
 
@@ -62,31 +66,30 @@ func (s *WebServer) SetMiddlewares(middlewares []func(http.Handler) http.Handler
 }
 
 func (s *WebServer) Start() {
-	//load the defined routes
 	s.LoadRoutes()
-
 	port := fmt.Sprintf(":%v", s.Port)
+	log.Default().Println("running server in port: " + port)
 	log.Fatal(http.ListenAndServe(port, s.Router))
 
 }
 
 func (s *WebServer) LoadRoutes() {
-	// middlewares := s.GetMiddlewares()
-	// s.SetMiddlewares(middlewares)
+	middlewares := s.GetMiddlewares()
+	s.SetMiddlewares(middlewares)
 
-	// s.Router.Use(middleware.WithValue("jwt", s.Configs.TokenAuth))
-	// s.Router.Use(middleware.WithValue("JwtExperesIn", s.Configs.JWTExperesIn))
+	s.Router.Use(middleware.WithValue("jwt", s.Configs.TokenAuth))
+	s.Router.Use(middleware.WithValue("JwtExperesIn", s.Configs.JWTExperesIn))
 
 	s.Router.Route("/", func(r chi.Router) {
-		// r.Use(jwtauth.Authenticator)
-		r.Get(ROUTE_GET_USERS, s.UserHandler.ListUsers)
-		r.Get(ROUTE_GET_USER, s.UserHandler.GetUser)
+		r.Use(jwtauth.Verifier(s.Configs.TokenAuth))
+		r.Use(jwtauth.Authenticator)
 		r.Put(ROUTE_UPDATE_USER, s.UserHandler.UpdateUser)
 		r.Delete(ROUTE_DELETE_USER, s.UserHandler.DeleteUser)
 	})
 
+	s.Router.Get(ROUTE_GET_USERS, s.UserHandler.ListUsers)
+	s.Router.Get(ROUTE_GET_USER, s.UserHandler.GetUser)
 	s.Router.Post(ROUTE_CREATE_USER, s.UserHandler.CreateUser)
-	s.Router.Post(ROUTE_GENERATE_TOKEN, s.UserHandler.GetJWT)
+	s.Router.Post(ROUTE_GENERATE_TOKEN, s.TokenHandler.GetToken)
 	s.Router.Get(ROUTE_DOCS, httpSwagger.Handler(httpSwagger.URL(ROUTE_SWAGGER_DOCS)))
-
 }
